--- a/test/ui-lovelace.yaml
+++ b/test/ui-lovelace.yaml
@@ -3503,6 +3503,29 @@ views:
                 actions:
                   - delay: 10000
 
+      - type: custom:button-card
+        entity: switch.skylight
+        name: Access other entity states (no triggers_update)
+        show_label: true
+        label: |
+          [[[
+            const ac = "switch.ac";
+            return `AC: ${states[ac].state}`;
+          ]]]
+        custom_fields:
+          nested:
+            card:
+              type: custom:button-card
+              entity: switch.ac
+        styles:
+          custom_fields:
+            nested:
+              - position: absolute
+              - top: 5px
+              - right: 5px
+              - width: 20%
+              - height: 20%
+
   - title: Grid
     type: sections
     sections:
