--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
   "image": "thomasloven/hass-custom-devcontainer",
   "runArgs": ["--env-file", "${localWorkspaceFolder}/test/.env"],
   "appPort": ["${localEnv:BUTTONCARD_HA_HOST:8123}:8123", "${localEnv:BUTTONCARD_DIST_HOST:5000}:5000"],
-  "postCreateCommand": "sudo --preserve-env=PATH -E uv pip install --upgrade --force-reinstall homeassistant && sudo --preserve-env=PATH -E uv pip show homeassistant | grep -i version: | cut -d ' ' -f 2 | sudo tee /config/.HA_VERSION && sudo --preserve-env=PATH -E container setup && yarn install --frozen-lockfile && sudo --preserve-env=PATH -E uv pip install -r docs/requirements.txt",
+  "postCreateCommand": "sudo --preserve-env=PATH -E bash -c \"source /usr/local/share/nvm/nvm.sh && nvm install 24\" && sudo --preserve-env=PATH -E uv pip install --upgrade --force-reinstall homeassistant && sudo --preserve-env=PATH -E uv pip show homeassistant | grep -i version: | cut -d ' ' -f 2 | sudo tee /config/.HA_VERSION && sudo --preserve-env=PATH -E container setup && yarn install --frozen-lockfile && sudo --preserve-env=PATH -E uv pip install -r docs/requirements.txt",
   "mounts": [
     "source=${localWorkspaceFolder},target=/config/www/workspace,type=bind",
     "source=${localWorkspaceFolder}/test,target=/config/test,type=bind",
