--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "6.1.0-dev.2",
   "description": "Button card for lovelace",
   "main": "dist/button-card.js",
+  "type": "module",
   "scripts": {
     "build": "npm run lint && npm run rollup",
     "rollup": "rollup -c",
@@ -33,45 +34,44 @@
     "@babel/core": "^7.12.3",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-decorators": "^7.12.1",
-    "@rollup/plugin-babel": "^5.2.1",
-    "@rollup/plugin-commonjs": "^16.0.0",
-    "@rollup/plugin-json": "^4.0.2",
-    "@rollup/plugin-node-resolve": "^10.0.0",
+    "@rollup/plugin-babel": "^6.1.0",
+    "@rollup/plugin-commonjs": "^28.0.9",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.3",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.1",
     "@semantic-release/exec": "^7.1.0",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/npm": "^12.0.2",
+    "@semantic-release/npm": "^13.1.1",
     "@semantic-release/release-notes-generator": "^14.0.3",
-    "@typescript-eslint/eslint-plugin": "^6.1.0",
-    "@typescript-eslint/parser": "^6.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
     "conventional-changelog-conventionalcommits": "^9.1.0",
-    "eslint": "7.12.1",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint": "9.38.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-prettier": "^5.5.4",
     "npm": "^11.5.2",
-    "prettier": "^2.1.2",
-    "prettier-eslint": "^11.0.0",
-    "rollup": "^2.33.1",
-    "rollup-plugin-cleanup": "^3.2.1",
-    "rollup-plugin-serve": "^1.1.0",
+    "prettier": "^3.6.2",
+    "prettier-eslint": "^16.4.2",
+    "rollup": "^4.52.5",
+    "rollup-plugin-serve": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.29.0",
-    "semantic-release": "^24.2.7",
-    "ts-lit-plugin": "^1.1.10",
-    "typescript": "^4.0.5",
-    "typescript-styled-plugin": "^0.15.0",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "semantic-release": "^25.0.1",
+    "ts-lit-plugin": "^2.0.2",
+    "typescript": "^5.9.3",
+    "typescript-styled-plugin": "^0.18.3",
     "yarn-audit-fix": "^10.1.1"
   },
   "dependencies": {
-    "@ctrl/tinycolor": "^3.1.6",
-    "fast-copy": "^2.1.0",
-    "home-assistant-js-websocket": "^8.2.0",
-    "lit": "^2.7.6",
-    "lit-element": "^3.3.2",
-    "lit-html": "^2.7.5",
+    "@ctrl/tinycolor": "^4.2.0",
+    "fast-copy": "^3.0.2",
+    "home-assistant-js-websocket": "^9.5.0",
+    "lit": "^3.3.1",
+    "lit-element": "^4.2.1",
+    "lit-html": "^3.3.1",
     "memoize-one": "^6.0.0",
     "parse-duration": "^2.1.4"
   }
